2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (FileBuffer::find_matches): Remove bogus
	comment.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (FileBuffer::undo_remove_match): Avoid
	decrementing current_match_ since it might point to the start
	of the range.  Also remove the call to remove_tag_current()
	because it does nothing if match_removed_ is set anyway.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (menuitem_undo): Add accelerator key CTRL-z.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.h: Eliminate the include dependency on the pcre.h
	header.  This requires defining the numeric values of the bit flag
	enums directly, but fortunately these cannot be changed without
	breaking ABI anyway.

	* src/pcreshell.cc: Include pcre.h, and use static_cast<> where
	necessary to allow for Pattern::pcre_ to be declared as void*.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (MainWindow::set_title_filename): Concatenate
	with the string literal PACKAGE_NAME at compile time.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::find_add_file): New method.
	Move the actual file-adding parts from find_check_file() here.
	(FileTree::find_recursively): Move the file testing previously
	done in find_check_file() into this method in order to make the
	recursion more obvious.  Also handle Glib::Dir exceptions right
	here, so that the caller doesn't have to handle them.
	(FileTree::find_files): Remove the try/catch block enclosing the
	call to find_recursively().  We no longer need to do it twice.
	(FileTree::find_check_file): Remove.

2004-06-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::calculate_file_index): Simplify.

2004-06-02  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (FileBuffer::create_with_error_message):
	Minor code rearrangement.
